[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/themes/statlist.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/pt_24.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/pt_36.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/pt_20.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/fonts/pt_30.tres" type="DynamicFont" id=5]
[ext_resource path="res://files/scenes/CharPanel/CharacterPanel.gd" type="Script" id=6]
[ext_resource path="res://files/scenes/charinfo_portrait.gd" type="Script" id=7]
[ext_resource path="res://assets/images/iconsskills/arron_1.png" type="Texture" id=8]
[ext_resource path="res://assets/images/buttons/charpanel/button_skill.png" type="Texture" id=9]
[ext_resource path="res://assets/images/buttons/charpanel/hpbar_charinfo_filler.png" type="Texture" id=12]
[ext_resource path="res://assets/images/iconsgear/arron_weapon1_1.png" type="Texture" id=13]
[ext_resource path="res://assets/images/gui/charpanel/panel_charinfo_big.png" type="Texture" id=14]
[ext_resource path="res://assets/images/gui/charpanel/panel_charinfo_portrait_back.png" type="Texture" id=15]
[ext_resource path="res://assets/images/gui/charpanel/panel_charinfo_portrait_pressed.png" type="Texture" id=16]
[ext_resource path="res://assets/images/gui/charpanel/panel_charinfo_gear_pressed.png" type="Texture" id=17]
[ext_resource path="res://assets/images/gui/charpanel/panel_charinfo_gear_disabled.png" type="Texture" id=18]
[ext_resource path="res://assets/images/iconsskills/source_pierce.png" type="Texture" id=19]
[ext_resource path="res://assets/images/gui/charpanel/panel_charinfo_portrait.png" type="Texture" id=20]
[ext_resource path="res://assets/images/portrait/ArronNormal.png" type="Texture" id=21]
[ext_resource path="res://assets/images/gui/charpanel/panel_charinfo_gear.png" type="Texture" id=22]
[ext_resource path="res://assets/images/iconsgear/arron_armor_2.png" type="Texture" id=23]
[ext_resource path="res://assets/images/gui/charpanel/panel_charinfo_descriptionmask.png" type="Texture" id=24]
[ext_resource path="res://assets/images/buttons/charpanel/expbar_charinfo_filler.png" type="Texture" id=25]
[ext_resource path="res://assets/images/gui/charpanel/panel_charinfo_portrait_hover.png" type="Texture" id=26]
[ext_resource path="res://assets/images/buttons/charpanel/expbar_charinfo_frame.png" type="Texture" id=27]
[ext_resource path="res://assets/images/iconsskills/shield.png" type="Texture" id=28]
[ext_resource path="res://files/scenes/CharPanel/SkillPanel.tscn" type="PackedScene" id=29]
[ext_resource path="res://assets/themes/button_location_small.tres" type="Theme" id=31]
[ext_resource path="res://assets/fonts/pt_30_boldshad.tres" type="DynamicFont" id=32]
[ext_resource path="res://tooltip_theme.tres" type="Theme" id=33]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 33 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -800.0
margin_top = -508.0
margin_right = 800.0
margin_bottom = 512.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_left = 650.0
margin_top = 13.0
margin_right = 952.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
text = "Info"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
margin_left = 52.0
margin_top = 97.0
margin_right = -52.0
margin_bottom = 471.0
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer"]
margin_left = 632.0
margin_right = 864.0
margin_bottom = 362.0
size_flags_horizontal = 6
custom_constants/separation = 20

[node name="panel" type="TextureButton" parent="Panel/ScrollContainer/HBoxContainer"]
margin_right = 232.0
margin_bottom = 362.0
rect_min_size = Vector2( 150, 150 )
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 26 )
script = ExtResource( 7 )

[node name="TextureRect2" type="TextureRect" parent="Panel/ScrollContainer/HBoxContainer/panel"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 15 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel/ScrollContainer/HBoxContainer/panel"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -177.5
margin_right = 114.0
margin_bottom = 177.5
texture = ExtResource( 21 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/panel"]
anchor_right = 1.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
text = "Arron"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel/ScrollContainer/HBoxContainer/panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -37.0
margin_bottom = -5.0
custom_fonts/font = ExtResource( 2 )
text = "Arron"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsPanel" type="Control" parent="Panel"]
margin_left = 27.0
margin_top = 503.0
margin_right = 421.0
margin_bottom = 987.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="Panel/StatsPanel"]
anchor_right = 1.0
margin_top = 6.0
margin_right = -2.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.0823529, 0.105882, 0.113725, 1 )
text = "Name"
align = 1

[node name="portrait" type="TextureRect" parent="Panel/StatsPanel"]
margin_left = 89.0
margin_top = 52.0
margin_right = 310.0
margin_bottom = 310.0
texture = ExtResource( 21 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel/StatsPanel/portrait"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -11.0
margin_top = -11.0
margin_right = 8.0
margin_bottom = 11.0
texture = ExtResource( 24 )

[node name="exp" type="TextureProgress" parent="Panel/StatsPanel"]
margin_left = 88.0
margin_top = 316.0
margin_right = 310.0
margin_bottom = 348.0
value = 50.0
texture_over = ExtResource( 27 )
texture_progress = ExtResource( 25 )

[node name="Label" type="Label" parent="Panel/StatsPanel/exp"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "50/100"
align = 1
valign = 1

[node name="hp" type="TextureProgress" parent="Panel/StatsPanel"]
margin_left = 88.0
margin_top = 351.0
margin_right = 310.0
margin_bottom = 383.0
value = 50.0
texture_over = ExtResource( 27 )
texture_progress = ExtResource( 12 )

[node name="Label" type="Label" parent="Panel/StatsPanel/hp"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "50/100"
align = 1
valign = 1

[node name="dmg" type="HBoxContainer" parent="Panel/StatsPanel"]
margin_left = 90.0
margin_top = 382.0
margin_right = 303.0
margin_bottom = 414.0
size_flags_horizontal = 3
alignment = 1

[node name="stat" type="Label" parent="Panel/StatsPanel/dmg"]
margin_left = 39.0
margin_right = 81.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0823529, 0.105882, 0.113725, 1 )
text = "ATK"
align = 1

[node name="value" type="Label" parent="Panel/StatsPanel/dmg"]
margin_left = 85.0
margin_right = 137.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0823529, 0.105882, 0.113725, 1 )
text = "4000"
align = 1

[node name="icon" type="TextureRect" parent="Panel/StatsPanel/dmg"]
margin_left = 141.0
margin_right = 173.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 19 )
expand = true

[node name="ResPanel" type="Control" parent="Panel"]
visible = false
margin_left = 27.0
margin_top = 612.0
margin_right = 421.0
margin_bottom = 822.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="Panel/ResPanel"]
anchor_right = 1.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0823529, 0.105882, 0.113725, 1 )
text = "Resistances"
align = 1

[node name="res" type="GridContainer" parent="Panel/ResPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 42.0
margin_right = -48.0
columns = 3

[node name="panel" type="HBoxContainer" parent="Panel/ResPanel/res"]
margin_right = 104.0
margin_bottom = 50.0

[node name="icon" type="TextureRect" parent="Panel/ResPanel/res/panel"]
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 28 )

[node name="src" type="TextureRect" parent="Panel/ResPanel/res/panel/icon"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ResPanel/res/panel"]
margin_left = 54.0
margin_top = 9.0
margin_right = 104.0
margin_bottom = 41.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0823529, 0.105882, 0.113725, 1 )
text = ": 100"

[node name="SkillsButton" type="Button" parent="Panel"]
margin_left = 114.0
margin_top = 915.0
margin_right = 336.0
margin_bottom = 971.0
theme = ExtResource( 31 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_colors/font_color_hover = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_colors/font_color_pressed = Color( 0.870588, 0.870588, 0.870588, 1 )
text = "Details"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weapon1" type="TextureButton" parent="Panel"]
margin_left = 510.0
margin_top = 520.0
margin_right = 770.0
margin_bottom = 820.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 6
toggle_mode = true
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 17 )
texture_disabled = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Panel/weapon1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -110.0
margin_right = 110.0
margin_bottom = 110.0
rect_min_size = Vector2( 220, 220 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/weapon1"]
anchor_right = 1.0
margin_top = 5.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
text = "Level 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel/weapon1"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.414
margin_top = -50.0
margin_right = 1.414
margin_bottom = -10.0
custom_fonts/font = ExtResource( 5 )
text = "Broad Sword"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weapon2" type="TextureButton" parent="Panel"]
margin_left = 830.0
margin_top = 520.0
margin_right = 1090.0
margin_bottom = 820.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 6
toggle_mode = true
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 17 )
texture_disabled = ExtResource( 18 )

[node name="Icon" type="TextureRect" parent="Panel/weapon2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -110.0
margin_right = 110.0
margin_bottom = 110.0
rect_min_size = Vector2( 220, 220 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/weapon2"]
anchor_right = 1.0
margin_top = 5.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
text = "Level 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel/weapon2"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.414
margin_top = -50.0
margin_right = 1.414
margin_bottom = -10.0
custom_fonts/font = ExtResource( 5 )
text = "Broad Sword"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="armor" type="TextureButton" parent="Panel"]
margin_left = 1250.0
margin_top = 520.0
margin_right = 1510.0
margin_bottom = 820.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 6
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 17 )
texture_disabled = ExtResource( 18 )

[node name="Icon" type="TextureRect" parent="Panel/armor"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -110.0
margin_right = 110.0
margin_bottom = 110.0
rect_min_size = Vector2( 200, 210 )
texture = ExtResource( 23 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/armor"]
anchor_right = 1.0
margin_top = 5.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.290196, 1, 0.992157, 1 )
text = "Level 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel/armor"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.414
margin_top = -50.0
margin_right = 1.414
margin_bottom = -10.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.290196, 1, 0.992157, 1 )
text = "Broad Sword"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sp_label" type="Label" parent="Panel"]
margin_left = 448.0
margin_top = 859.0
margin_right = 598.0
margin_bottom = 985.0
custom_fonts/font = ExtResource( 32 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
text = "1
2
3"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
margin_left = 620.0
margin_top = 869.0
margin_right = 1554.0
margin_bottom = 977.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="Panel/HBoxContainer"]
visible = false
margin_right = 108.0
margin_bottom = 108.0
texture_normal = ExtResource( 9 )

[node name="icon" type="TextureRect" parent="Panel/HBoxContainer/Button"]
margin_left = 9.0
margin_top = 9.0
margin_right = 98.0
margin_bottom = 98.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillPanel" parent="." instance=ExtResource( 29 )]
visible = false

[editable path="SkillPanel"]
